--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_plugin_couchbase
-description: A new Flutter plugin.
+description: Flutter plugin to handle couchbase lite for android.
 version: 0.0.1
 author:Ahmed Yousri
-homepage:https://github.com/hemeda3/
+homepage:https://github.com/hemeda3/couchbase-lite-flutter
 
 dependencies:
   flutter:
